//
// Copyright 2020 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.examples.authentication;

import "google/protobuf/empty.proto";

// Parameters needed by clients to initiate OpenID Connect authentication requests.
message AuthParameters {
  string client_id = 1;
  string auth_endpoint = 2;
  // TODO(#886): Add support for scope, state and code challenge.
}

service Authentication {
  rpc GetAuthParameters(google.protobuf.Empty) returns (AuthParameters);
}
